# Async_API_sprint_1

./: .env.example  .env_test  .flake8  111.py  Dockerfile  Makefile  README.md  docker-compose-base.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
etl/: constants.py  main.py  queries.py
etl/classes/: extractor.py  loader.py  transform.py
nginx/: app.conf  nginx.conf
src/: main.py
src/api/v1/: films.py  genres.py  persons.py  roles.py
src/common/: decode_auth_token.py  handlers.py  utils.py
src/common/caches/: redis_cache.py  serializer.py
src/common/chaches/: redis_cache.py
src/common/clients/: auth_api.py
src/common/connectors/: elastic.py  es.py  redis.py
src/common/storages/: base.py  elastic.py  es_storage.py  redis_storage.py
src/common/storages/caches/: base.py  consts.py  redis.py  serializer.py
src/core/: __init__.py  auth.py  base.py  config.py  logger.py  services.py  settings.py
src/db/: elastic.py  redis.py
src/models/: __init__.py  base.py  film.py  genre.py  index.py  person.py  response.py  role.py  search.py
src/services/: base.py  es_storage.py  film.py  genre.py  person.py  redis_storage.py
tests/: .env_test_local  Dockerfile  conftest.py  wait_for_es.py  wait_for_redis.py
tests/functional/: conftest.py
tests/functional/core/: __init__.py  settings.py
tests/functional/testdata/: consts.py  es_data_genres.json  es_data_movies.json  es_data_persons.json
tests/functional/utils/: auth.py  export_data.py
tests/vars/: genres.py  persons.py
(+22 files in other folders)
